[package]
name = "maskedvbyte-sys"
version = "0.1.0"
authors = ["csmoe"]
description = "Low level bindings to MaskedVbyte."
documentation = "https://docs.rs/maskedvbyte-sys"
homepage = "https://github.com/csmoe/maskedvbyte-rs"
repository = "https://github.com/csmoe/maskedvbyte-rs"
readme = "README.md"
keywords = ["maskedvbyte", "decoding", "encoding"]
license = "MIT"
categories = ["ffi"]
build = "build.rs"

[build-dependencies]
bindgen = "0.39.0"
libc = "0.2"
